--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "author": "AJ ONeal <coolaj86@gmail.com> (http://coolaj86.com/)",
   "name": "love-language",
   "description": "Quizomatic Presents: A commandline version of The Love Languages test",
-  "version": "0.11.1",
-  "homepage": "https://github.com/coolaj86/the-5-love-languages",
+  "version": "0.11.2",
+  "homepage": "https://git.daplie.com/coolaj86/the-5-love-languages",
   "repository": {
-    "url": "git://github.com/coolaj86/the-5-love-languages.git"
+    "url": "git://git.daplie.com/coolaj86/the-5-love-languages.git"
   },
   "main": "quizomatic.js",
   "scripts": {
     "test": "node cli",
-    "postinstall": "node get-example"
+    "postinstall": "node ./get-example.js"
   },
   "dependencies": {
     "knuth-shuffle": "~1.0.0"
