--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "author": "AJ ONeal <coolaj86@gmail.com> (http://coolaj86.com/)",
+  "author": "AJ ONeal <coolaj86@gmail.com> (https://coolaj86.com/)",
   "name": "love-language",
   "description": "Quizomatic Presents: A commandline version of The Love Languages test",
-  "version": "0.11.2",
-  "homepage": "https://git.daplie.com/coolaj86/the-5-love-languages",
+  "version": "1.0.0",
+  "homepage": "https://github.com/coolaj86/the-5-love-languages",
   "repository": {
-    "url": "git://git.daplie.com/coolaj86/the-5-love-languages.git"
+    "url": "git://github.com/coolaj86/the-5-love-languages.git"
   },
   "main": "quizomatic.js",
   "scripts": {
