--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "author": "AJ ONeal <coolaj86@gmail.com> (https://coolaj86.com/)",
   "name": "love-language",
   "description": "Quizomatic Presents: A commandline version of The Love Languages test",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "homepage": "https://github.com/coolaj86/the-5-love-languages",
   "repository": {
     "url": "git://github.com/coolaj86/the-5-love-languages.git"
   },
   "main": "quizomatic.js",
-  "files": ["cli.js", "get-example.js", "quizomatic.js"],
+  "files": [
+    "cli.js",
+    "get-example.js",
+    "quizomatic.js"
+  ],
   "scripts": {
     "test": "node cli",
     "postinstall": "node ./get-example.js"
